fixed padding nut form still not responsive

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #040a3b;
-  color: #ffff;
+  background-color: #ffffff;
+  color: #040a3b;
 }
 img {
   width: 200px;
@@ -17,10 +17,10 @@ p {
 }
 
 section {
-  color: #ffff;
+  color: #040a3b;
   padding: 50px 20px; /* Add more top padding */
   margin: 20px;
-  background-color: #040a3b;
+  background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -34,62 +34,57 @@ h1 {
 form {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-}
-
-.form {
-  margin: 0 auto;
-  display: auto;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  color: #ffff;
+  margin-left: auto;
+  margin-right: auto;
+  color: #040a3b;
   font-size: 16px;
   font-family: Inter, sans-serif;
 }
 
+.form {
+  display: auto;
+  flex-wrap: wrap;
+  align-items: flex-start;
+
+  
+}
+
 .text-field {
+  width: 500px;
   margin: auto;
   padding-top: 0;
   padding-bottom: 0;
   padding: 12px 10px;
-  margin: 12px 4px;
   border-radius: 3px;
 }
 
 #message {
-  height: 80px;
+  width: 500px;
+  height: 120px;
+  margin: auto;
   padding-top: 0;
   padding-bottom: 0;
-  margin: auto;
+  padding: 12px 10px;
   border-radius: 3px;
-  position: relative;
 }
 
 #Name {
   display: inline;
 }
 .btn-submit {
+  text-align: center ;
+  width: 90px;
+  height: 30px;
   margin: auto;
   background-color: #18bd5b;
-  border-color: #18bd5b;
-  width: 180px;
-  height: 48px;
-  font-size: 16px;
-  font-weight: normal;
-  font-family: inherit;
-  color: #fff;
+  font: 16px normal inherit;
+  color: #040a3b;
   border-radius: 4px;
   border: 1px solid;
   cursor: pointer;
-  padding: 12px 10px;
+  padding: 0px 10px;
 }
 
-label {
-  font-family: Inter, sans-serif;
-  font-size: 16px;
-  margin-left: 2px;
-  margin-bottom: 2px;
-}
 
 .btn-submit:hover {
   background-color: #16aa52;
